--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "fast-csv": "^4.3.6",
+    "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "next": "13.4.7",
     "pg": "^8.11.1",
